.apex/src/objects/trailheadapp__Trailhead_User__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__Avatar__c</fullName>
        <label>Avatar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Completed__c</fullName>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__In_Progress__c</fullName>
        <label>In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Leaderboards__c</fullName>
        <label>Leaderboards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Hackday</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trailheadapp__Profile_URL__c</fullName>
        <label>Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Profile_Visibility__c</fullName>
        <label>Profile Visibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Rank__c</fullName>
        <label>Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trailheadapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trailhead_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trailhead User</label>
    <nameField>
        <label>Trailhead User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>